--- a/apps/dev-stalk-landing-page/src/sass/components/_social.scss
+++ b/apps/dev-stalk-landing-page/src/sass/components/_social.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   &-shadow {
-    z-index: -1;
+    z-index: 1;
     position: absolute;
     height: 100%;
     width: 100%;
@@ -12,6 +12,7 @@
     transform: translate(-3px, 3px);
   }
   &-wrapper {
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
